# timebank

./: .gitignore  Cargo.toml  README.md  Rocket.toml
migrations/2020-08-25-152043_users/: down.sql  up.sql
public/: index.html
public/static/: index.css
src/: lib.rs  main.rs  models.rs  schema.rs
src/controllers/: auth.rs  login.rs  mod.rs  signup.rs
src/helpers/: http_response.rs  mod.rs
src/models/: activity.rs  auth.rs  database.rs  mod.rs  response.rs
src/routes/: auth.rs  data.rs  headers.rs  helpers.rs  mod.rs  request.rs  response.rs
