[package]
name = "timebank"
version = "0.1.0"
authors = ["Clayton Herbst <herbsca1@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.5"
dotenv = "0.15.0"
serde = { version = "1.0.115", features = ["derive"] }

[dependencies.diesel]
version = "1.4.4"
features = ["sqlite"]

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["json", "helmet", "diesel_sqlite_pool"]